Fix alignment on buttons and tabs

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ html {
         right: 1rem;
     }
     .type-nav {
-        margin-top: 2.5rem!important;
+        margin-top: -1.25rem!important;
     }
 }
 
